# vegan-cosmetics

./: .gitignore  README.md  key.key  main.py  pyproject.toml  requirements.md  users.db  web_scraper.py
assets/: beauty_api.json  fake_item_list.txt  hundred_percent_saved.txt  test_beauty_api.json  thrive_cosmetics_saved.txt  vegan_cosmetics_data.txt  vegan_cosmetics_saved.txt
assets/user_saved_files/: testing1_vegan_saved_cosmetics.txt  testing2_vegan_saved_cosmetics.txt
tests/: flo.py  test_beauty_api.py  test_main.py  test_vegan_cosmetics.py
tests/flow/: flo_no_order_no_view_quit.txt  flo_order_bad_quit.txt  flo_order_mascara_cream_no_view.txt  flo_order_mascara_no_view_quit.txt  flo_order_mascara_then_quit.txt  flo_order_quit.txt  flo_quit.txt
v_vegan_cosmetics/encrypt_decrypt/: encrypt_decrypt.py
v_vegan_cosmetics/search_with_api/: beauty_api.py
vegan_cosmetics/beauty_api/: beauty_api.py  walmart_api.py
vegan_cosmetics/beuty_api/: beuty_api.py
vegan_cosmetics/database_peewee/: database_peewee.py
vegan_cosmetics/search_with_api/: beauty_api.py  walmart_api.py
vegan_cosmetics/search_with_regex/: search_with_regex.py
vegan_cosmetics/threading_function/: threading_function.py
vegan_cosmetics/web_scraper/: backup_web_scraper.py  testing_scraper.py  web_scraper.py
