[tool.poetry]
name = "vegan-cosmetics"
version = "0.1.0"
description = ""
authors = ["jpchato <jpchato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"



selenium = "^3.141.0"
requests = "^2.23.0"
ipython = "^7.15.0"
beautifulsoup4 = "^4.9.1"
bs4 = "^0.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
